--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/awaria
+spring.datasource.username=postgres
+spring.datasource.password=dupa8
+
+spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
