--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=dupa8
 
 spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate=ERROR
