--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate=ERROR
+
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
