--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,11 @@ spring.datasource.password=dupa8
 
 spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate=ERROR
+management.endpoint.health.show-details=always
 
 spring.servlet.multipart.max-file-size=25MB
 spring.servlet.multipart.max-request-size=25MB
